# kakao_mcp_server

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
k8s/: deployment.yaml  service.yaml
scripts/: deploy-kakaocloud.sh
src/gift_mate/: __init__.py  messages.py  models.py  naver_search.py  recommender.py  server.py
src/gift_mate/data/: gifts.json
